chore: add add-opens jvm arguments for tests